add security check with box communication